[tool.poetry]
name = "har2py"
version = "0.1.1"
description = ""
authors=["Sangam Thakur"]


[tool.poetry.dependencies]
python = "3.9"
Jinja2 = "2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.6.4"
black = "^20.8b1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
har2py = "har2py.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
